build: application setting